# blockworld_gripper

./: CMakeLists.txt  README.md  package.xml
launch/: blockworld_gripper_launch.py  blockworld_gripper_launch_3_stacks.py  blockworld_gripper_launch_5_stacks.py  commands  commands_pddl  launch_commands.txt  problem1  problem2  problem_big_1  problem_big_2  terminal_launch.py
misc/: errors.txt
pddl/: domain.pddl  domain.ppdl  domain2.pddl  problem.pddl  problem_big_2.pddl  problem_small_1.pddl  problem_small_2.pddl  test-domain.pddl
src/: control_gripper_action_node.cpp  grab_action_node.cpp  move_gripper_action_node.cpp  place_action_node.cpp  stack_action_node.cpp  unstack_action_node.cpp
terminal_problems/: problem_big_2  problem_small_1  problem_small_2
